# mcintir

./: .gitignore  Cargo.toml  README.md  katex-header.html
benches/: plain.rs  plain_benchmark.rs
examples/: investigate_parallel.rs  parallel_random_numbers.rs  plain.rs  plain_histogram.rs  rng_de_serialize.rs
src/: callbacks.rs  core.rs  histograms.rs  lib.rs  plain.rs
src/core/: estimators.rs  mod.rs
src/integrators/: mod.rs  plain.rs
tests/: plain.rs
