[package]
name = "mcintir"
version = "0.1.0"
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/cschwan/mcintir"
readme = "README.md"
keywords = ["high-energy-physics", "integration", "monte-carlo", "physics"]
categories = ["science"]
description = "Monte Carlo Integration In Rust"

[dependencies]
num-traits = "0.2"
rand = { default-features = false, features = ["serde1"], version = "0.7" }
rand_pcg = { features = ["serde1"], version = "0.2.1" }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[example]]
name = "plain"
